--- a/laravel/package.json
+++ b/laravel/package.json
@@ -3,5 +3,14 @@
   "devDependencies": {
     "gulp": "^3.8.8",
     "laravel-elixir": "*"
+  },
+  "dependencies": {
+    "chart.js": "^1.0.2",
+    "jquery": "^2.1.3",
+    "moment": "^2.10.2",
+    "react": "^0.13.1",
+    "react-bootstrap": "^0.20.3",
+    "react-chartjs": "^0.6.0",
+    "react-datepicker": "^0.6.2"
   }
 }
