--- a/laravel/package.json
+++ b/laravel/package.json
@@ -6,11 +6,13 @@
   },
   "dependencies": {
     "chart.js": "^1.0.2",
+    "d3": "^3.5.5",
     "jquery": "^2.1.3",
     "moment": "^2.10.2",
     "react": "^0.13.1",
     "react-bootstrap": "^0.20.3",
     "react-chartjs": "^0.6.0",
+    "react-d3-components": "^0.4.8",
     "react-datepicker": "^0.6.2"
   }
 }
