--- a/laravel/package.json
+++ b/laravel/package.json
@@ -1,7 +1,10 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.8",
+    "del": "^1.2.0",
+    "gulp": "^3.9.0",
+    "gulp-jshint": "^1.11.1",
+    "gulp-util": "^3.0.6",
     "laravel-elixir": "*"
   },
   "dependencies": {
