--- a/laravel/package.json
+++ b/laravel/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "devDependencies": {
+    "glob": "5.0.3",
     "browserify": "^10.2.4",
     "del": "^1.2.0",
     "gulp": "^3.9.0",
@@ -10,7 +11,8 @@
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
     "laravel-elixir": "*",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0" 
+	
   },
   "dependencies": {
     "chart.js": "^1.0.2",
