--- a/laravel/package.json
+++ b/laravel/package.json
@@ -1,16 +1,12 @@
 {
   "private": true,
   "devDependencies": {
-    "browserify": "^10.2.4",
-    "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^1.11.1",
     "gulp-react": "^3.0.1",
     "gulp-uglify": "^1.2.0",
-    "gulp-util": "^3.0.6",
-    "laravel-elixir": "*",
-    "vinyl-source-stream": "^1.1.0"
+    "laravel-elixir": "*"
   },
   "dependencies": {
     "chart.js": "^1.0.2",
