--- a/laravel/package.json
+++ b/laravel/package.json
@@ -6,7 +6,7 @@
     "gulp-jshint": "^1.11.1",
     "gulp-react": "^3.0.1",
     "gulp-uglify": "^1.2.0",
-    "laravel-elixir": "*"
+    "laravel-elixir": "^5.0.0"
   },
   "dependencies": {
     "chart.js": "^1.0.2",
