--- a/laravel/package.json
+++ b/laravel/package.json
@@ -3,5 +3,8 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "laravel-elixir": "^5.0.0"
+  },
+  "dependencies": {
+    "file-saver": "^1.3.2"
   }
 }
