--- a/laravel/package.json
+++ b/laravel/package.json
@@ -5,6 +5,7 @@
     "laravel-elixir": "^5.0.0"
   },
   "dependencies": {
-    "file-saver": "^1.3.2"
+    "file-saver": "^1.3.2",
+    "es6-promise": "^2.3.0"
   }
 }
