--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -20,6 +20,7 @@ MAIL_PASSWORD=null
 #JWT_ACTIVE=false
 #JWT_MOCK_USER_ID=5
 
-GA_ID=UA-61932959-2
+GA_ID=UA-61932959-2     #DEV
+#GA_ID=UA-61932959-3    #TEST
 
 
