--- a/laravel/package.json
+++ b/laravel/package.json
@@ -5,7 +5,10 @@
     "laravel-elixir": "^5.0.0"
   },
   "dependencies": {
+    "canvas-to-blob": "^0.0.0",
+    "es6-promise": "^2.3.0",
     "file-saver": "^1.3.2",
-    "es6-promise": "^2.3.0"
+    "jquery": "^2.2.4",
+    "react": "^0.13.3",
   }
 }
