--- a/laravel/package.json
+++ b/laravel/package.json
@@ -8,7 +8,8 @@
     "canvas-to-blob": "^0.0.0",
     "es6-promise": "^2.3.0",
     "file-saver": "^1.3.2",
+    "html2canvas":"^0.5.0-beta4",
     "jquery": "^2.2.4",
-    "react": "^0.13.3",
+    "react": "^0.13.3"
   }
 }
