--- a/laravel/package.json
+++ b/laravel/package.json
@@ -5,6 +5,7 @@
     "laravel-elixir": "^5.0.0"
   },
   "dependencies": {
+    "bootstrap@3": "^3.3.7",
     "canvas-to-blob": "^0.0.0",
     "es6-promise": "^2.3.0",
     "file-saver": "^1.3.2",
