--- a/laravel/package.json
+++ b/laravel/package.json
@@ -13,6 +13,7 @@
     "html2canvas": "^0.5.0-beta4",
     "jquery": "^2.2.4",
     "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "react-datepicker": "^0.32.0"
   }
 }
