--- a/laravel/package.json
+++ b/laravel/package.json
@@ -14,6 +14,7 @@
     "jquery": "^2.2.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-datepicker": "^0.32.0"
+    "react-datepicker": "^0.32.0",
+    "timepicker":"^1.11.5"
   }
 }
