--- a/laravel/package.json
+++ b/laravel/package.json
@@ -13,8 +13,9 @@
     "html2canvas": "^0.5.0-beta4",
     "jquery": "^2.2.4",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2",
     "react-datepicker": "^0.32.0",
-    "timepicker":"^1.11.5"
+    "react-dom": "^15.3.2",
+    "react-select": "^1.0.0-rc.2",
+    "timepicker": "^1.11.5"
   }
 }
