--- a/laravel/package.json
+++ b/laravel/package.json
@@ -12,6 +12,7 @@
     "file-saver": "^1.3.2",
     "html2canvas": "^0.5.0-beta4",
     "jquery": "^2.2.4",
+    "moment": "^2.15.1",
     "react": "^15.3.2",
     "react-datepicker": "^0.32.0",
     "react-dom": "^15.3.2",
