--- a/laravel/package.json
+++ b/laravel/package.json
@@ -8,10 +8,12 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "canvas-to-blob": "^0.0.0",
+    "console-polyfill": "^0.2.3",
     "es6-promise": "^2.3.0",
     "file-saver": "^1.3.2",
     "html2canvas": "^0.5.0-beta4",
     "jquery": "^2.2.4",
+    "jquery-placeholder": "^2.3.1",
     "moment": "^2.15.1",
     "react": "^15.3.2",
     "react-datepicker": "^0.32.0",
