--- a/laravel/package.json
+++ b/laravel/package.json
@@ -21,6 +21,7 @@
     "react-datepicker": "^0.32.0",
     "react-dom": "^15.3.2",
     "react-select": "^1.0.0-rc.2",
-    "timepicker": "^1.11.5"
+    "timepicker": "^1.11.5",
+    "number-to-locale-string": "^1.0.1"
   }
 }
