--- a/laravel/package.json
+++ b/laravel/package.json
@@ -9,19 +9,20 @@
     "bootstrap": "^3.3.7",
     "canvas-to-blob": "^0.0.0",
     "console-polyfill": "^0.2.3",
+    "dotdotdot": "^1.7.0",
     "es6-promise": "^2.3.0",
     "file-saver": "^1.3.2",
     "html2canvas": "^0.5.0-beta4",
     "jquery": "^2.2.4",
     "jquery-placeholder": "^2.3.1",
     "moment": "^2.15.1",
+    "number-to-locale-string": "^1.0.1",
     "prop-types": "^0.2.0",
     "react": "^15.3.2",
     "react-big-calendar": "^0.11.0",
     "react-datepicker": "^0.32.0",
     "react-dom": "^15.3.2",
     "react-select": "^1.0.0-rc.2",
-    "timepicker": "^1.11.5",
-    "number-to-locale-string": "^1.0.1"
+    "timepicker": "^1.11.5"
   }
 }
