--- a/laravel/package.json
+++ b/laravel/package.json
@@ -17,6 +17,7 @@
     "jquery-placeholder": "^2.3.1",
     "moment": "^2.15.1",
     "number-to-locale-string": "^1.0.1",
+    "numeral": "^2.0.4",
     "prop-types": "^0.2.0",
     "react": "^15.3.2",
     "react-big-calendar": "^0.11.0",
